--- a/Compiler/online/package.json
+++ b/Compiler/online/package.json
@@ -7,15 +7,20 @@
     "@codemirror/lang-javascript": "^6.1.9",
     "@codemirror/language": "^6.9.0",
     "@codemirror/legacy-modes": "^6.3.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-extensions-line-numbers-relative": "^4.22.1",
     "@uiw/codemirror-theme-solarized": "^4.21.9",
     "@uiw/codemirror-themes-all": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
     "file-saver": "^2.0.5",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
+    "react-detect-offline": "^2.4.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
